--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,6 @@
 == README
+A todo list application made by taking the Rails track from teamtreehouse.com
+Allows users to create todo lists and populate them with various todo items
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+* Ruby version - 2.0.0 p645
+* Rails version - 4.2.2 
